[package]
name = "jonathanve_guessing_game"
version = "0.1.0"
edition = "2021"
description = "A fun game where you guess the number the computer has chosen."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jonathanve/guessing_game"
repository = "https://github.com/jonathanve/guessing_game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
